Use display none / block to toggle instead of opacity 0 / 1 to prevent covering up website content behind

--- a/strava-data-analysis-website/src/components/Tooltip.css
+++ b/strava-data-analysis-website/src/components/Tooltip.css
@@ -7,7 +7,7 @@
 }
 
 .Tooltip .content {
-  opacity: 0;
+  display: none;
   position: absolute;
   background-color: white;
   padding: 16px;
@@ -22,12 +22,12 @@
 
 /* computers: hover */
 .Tooltip .activator:hover~:is(.Tooltip .content) {
-  opacity: 1;
+  display: block;
 }
 
 @media (pointer: coarse) {
   /* touchscreens: press */
   .Tooltip .content[data-visible=true] {
-    opacity: 1;
+    display: block;
   }
 }
